--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
 	"license": "ISC",
 	"description": "",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"colors": "^1.4.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"express-validator": "7.2.1",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.10.0",
 		"pg": "8.13.1",
 		"pg-hstore": "2.3.4",
 		"sequelize-typescript": "2.1.6"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
 		"@types/morgan": "^1.9.9",
+		"@types/nodemailer": "^6.4.17",
 		"nodemon": "3.1.9",
 		"ts-node": "10.9.2",
 		"typescript": "5.7.3"
