--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"colors": "^1.4.0",
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
+		"express-rate-limit": "^7.5.0",
 		"express-validator": "7.2.1",
+		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.10.0",
 		"pg": "8.13.1",
@@ -27,6 +29,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
 		"@types/nodemailer": "^6.4.17",
 		"nodemon": "3.1.9",
