--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "nodemon src/index.ts",
 		"dev:api": "nodemon src/index.ts --api",
 		"build": "tsc",
-		"start": "node ./dist/index.js"
+		"start": "node ./dist/index.js",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -29,10 +30,14 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/express": "^5.0.0",
+		"@types/jest": "^29.5.14",
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
 		"@types/nodemailer": "^6.4.17",
+		"jest": "^29.7.0",
+		"node-mocks-http": "^1.16.2",
 		"nodemon": "3.1.9",
+		"ts-jest": "^29.2.5",
 		"ts-node": "10.9.2",
 		"typescript": "5.7.3"
 	}
