--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"dev:api": "nodemon src/index.ts --api",
 		"build": "tsc",
 		"start": "node ./dist/index.js",
-		"test": "jest"
+		"test": "jest",
+		"test:coverage": "jest --coverage"
 	},
 	"keywords": [],
 	"author": "",
