--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc",
 		"start": "node ./dist/index.js",
 		"test": "jest",
-		"test:coverage": "jest --coverage"
+		"test:coverage": "jest --coverage",
+		"pretest": "ts-node ./src/data --clear"
 	},
 	"keywords": [],
 	"author": "",
@@ -35,9 +36,11 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"@types/morgan": "^1.9.9",
 		"@types/nodemailer": "^6.4.17",
+		"@types/supertest": "^6.0.2",
 		"jest": "^29.7.0",
 		"node-mocks-http": "^1.16.2",
 		"nodemon": "3.1.9",
+		"supertest": "^7.0.0",
 		"ts-jest": "^29.2.5",
 		"ts-node": "10.9.2",
 		"typescript": "5.7.3"
